--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
       type="image/svg+xml"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><linearGradient id='g' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f172a'/><stop offset='1' stop-color='%2338bdf8'/></linearGradient><rect width='64' height='64' rx='14' fill='url(%23g)'/><path d='M22 18h12c7 0 12 5 12 12s-5 12-12 12h-6v12h-6V18Zm12 18c3 0 6-3 6-6s-3-6-6-6h-6v12h6Z' fill='%23f8fafc'/></svg>"
     />
-    <link rel="alternate icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="alternate icon" href="%PUBLIC_URL%/jacode_favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo6894.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Jacode Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
